samples/_failures_safe/1761282779_20a83d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c79d92ab.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_c79d92ab.c:130:30: error: expected ‘;’ at end of input
  130 |         for (int j = 0; j < a
      |                              ^
      |                              ;
./samples/SAFE/__tmp_c79d92ab.c:130:9: error: expected declaration or statement at end of input
  130 |         for (int j = 0; j < a
      |         ^~~
./samples/SAFE/__tmp_c79d92ab.c:130:9: error: expected declaration or statement at end of input
